# persisted

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
examples/: hashmap.rs  lazy.rs  sqlite.rs
persisted_derive/: Cargo.toml
persisted_derive/src/: lib.rs
src/: eager.rs  lazy.rs  lib.rs
tests/: eager.rs  hashmap.rs  lazy.rs
