[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Persist arbitrary program state quickly and easily"
edition = "2021"
license = "MIT"
name = "persisted"
repository = "https://github.com/LucasPickering/persisted"
rust-version = "1.60.0"
version = "0.2.2"

[workspace]
members = ["persisted_derive"]

[dependencies]
derive_more = {version = "1.0.0", default-features = false, features = ["debug", "display", "deref", "deref_mut"]}
persisted_derive = {path = "./persisted_derive", version = "=0.1.1", optional = true}
serde = {version = "1", default-features = false, features = ["derive"], optional = true}

[dev-dependencies]
rusqlite = {version = "0.31.0", default-features = false, features = ["bundled"]}
serde_json = "1.0.117"

[features]
default = ["derive"]
derive = ["dep:persisted_derive"]
serde = ["dep:serde"]

[package.metadata.release]
pre-release-replacements = [
  {file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [{{version}}] - {{date}}"},
]
