[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Derive macros for persisted"
edition = "2021"
license = "MIT"
name = "persisted_derive"
repository = "https://github.com/LucasPickering/persisted"
version = "0.3.1"
# Intentionally omit rust-version here, we'll just rely on the root crate

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["extra-traits"] }

[package.metadata.release]
tag = false
