[package]
authors = {workspace = true}
description = "Derive macros for persisted"
edition = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "persisted_derive"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = {version = "2", features = ["extra-traits"]}

[package.metadata.release]
tag = false
